made final CSS corrections to align with user story

--- a/assets/style.css
+++ b/assets/style.css
@@ -7,15 +7,15 @@
 header {
     width: 100%;
     height: 250px;
-    background-color: rgb(236, 227, 252);
-    color: rgb(0, 0, 0);
+    background-color: #3D426B;  
+    color: #FFFFFF;
 }
 
 footer {
     width: 100%;
     height: 50px;
-    background-color: rgb(236, 227, 252);
-    color: rgb(0, 0, 0);
+    background-color: #3D426B;  
+    color: #FFFFFF;
 }
 
 h1,
@@ -24,7 +24,7 @@ h2 {
 }
 
 body {
-    background-color: rgb(232, 251, 225);
+    background-color: #FFF4e1;
     color: rgb(0, 0, 0);
 }
 
@@ -52,6 +52,6 @@ p {
     border-radius: 10px;
     width: 80%;
     margin: 30px auto;
-    border: 5px solid  rgb(105, 129, 96);
-    box-shadow: 5px 10px  #a4c19a;
+    border: 5px solid  #3D426B;
+    box-shadow: 5px 10px  #94A6bb;
 }
